adding some comments for the data wrangling section

--- a/BTC Machine Learning.ipynb
+++ b/BTC Machine Learning.ipynb
@@ -65,11 +65,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data\n",
+    "\n",
+    "Now we load up the data and do a little bit of data wrangling. We will load the data into a pandas dataframe and make su"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "data = pd.read_csv('./data/bitstampUSD_1-min_data_2012-01-01_to_2018-06-27.csv')\n",
     "type(data)"
    ]
@@ -300,8 +310,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We want to transform the data to get the average price grouped by the day and to see usual datetime format (not a timestamp as above).\n",
-    "\n"
+    "Let's take note of a few things:\n",
+    "\n",
+    "1. Take a look at the timestamp. The number you see is a Unix timestamp that captures the number of seconds since epoch (considered to be 1970-01-01 12AM). \n",
+    "Take for instance, the first row (1325317980). That is equivalent to Saturday, December 31, 2011 7:52:00 AM (GMT) and the second row (1325317980) is the same as Saturday, December 31, 2011 7:53:00 AM. Mainly, notice that it is in the same day. So for the time being, we will look at data partitioned by day, so we're going to need to get the average price grouped by the day.\n",
+    "2. We want to change the timestamp into a human readable datetime format."
    ]
   },
   {
@@ -327,10 +340,12 @@
     }
    ],
    "source": [
+    "#First we create a new column called \"date\" then we group by and grab the average\n",
     "data['date'] = pd.to_datetime(data['Timestamp'],unit='s').dt.date\n",
     "group = data.groupby('date')\n",
     "Daily_Price = group['Weighted_Price'].mean()\n",
     "\n",
+    "# let's take a look at the first 5\n",
     "Daily_Price.head()"
    ]
   },
@@ -357,6 +372,7 @@
     }
    ],
    "source": [
+    "#and the last 5\n",
     "Daily_Price.tail()\n"
    ]
   },
