--- a/BTC_Machine_Learning.ipynb
+++ b/BTC_Machine_Learning.ipynb
@@ -21565,13 +21565,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Comparison\n",
-    "\n",
-    "We have to do a means square comparison\n",
-    "\n",
-    "\n",
-    "*This is one of the interesting point I want to look into in this thesis as conventional wisdom states that financial instruments historical data points should matter less the further back they are.* \n"
+    "# Comparison\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
